start with structure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,71 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <header>
+            <h1>Movie Tube</h1>
+            <nav>
+                <ul>
+                    <li>Action</li>
+                    <li>Thriller</li>
+                    <li>Comedy</li>
+                    <li>Horror</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <aside>
+                <nav>
+                    <ul>
+                        <li>Action</li>
+                        <li>Thriller</li>
+                        <li>Comedy</li>
+                        <li>Horror</li>
+                    </ul>
+                </nav>
+            </aside>
+
+            <section>
+                <div class="card">
+                    <img src="images/thumbnail.jpg" alt="a thumbnail" width="150" height="100">
+                    <p>Some Movie Title</p>
+                </div>
+                <div class="card">
+                    <img src="images/thumbnail.jpg" alt="a thumbnail" width="150" height="100">
+                    <p>Some Movie Title</p>
+                </div>
+                <div class="card">
+                    <img src="images/thumbnail.jpg" alt="a thumbnail" width="150" height="100">
+                    <p>Some Movie Title</p>
+                </div>
+                <div class="card">
+                    <img src="images/thumbnail.jpg" alt="a thumbnail" width="150" height="100">
+                    <p>Some Movie Title</p>
+                </div>
+                <div class="card">
+                    <img src="images/thumbnail.jpg" alt="a thumbnail" width="150" height="100">
+                    <p>Some Movie Title</p>
+                </div>
+                <div class="card">
+                    <img src="images/thumbnail.jpg" alt="a thumbnail" width="150" height="100">
+                    <p>Some Movie Title</p>
+                </div>
+                <div class="card">
+                    <img src="images/thumbnail.jpg" alt="a thumbnail" width="150" height="100">
+                    <p>Some Movie Title</p>
+                </div>
+                <div class="card">
+                    <img src="images/thumbnail.jpg" alt="a thumbnail" width="150" height="100">
+                    <p>Some Movie Title</p>
+                </div>
+                <div class="card">
+                    <img src="images/thumbnail.jpg" alt="a thumbnail" width="150" height="100">
+                    <p>Some Movie Title</p>
+                </div>
+                <div class="card">
+                    <img src="images/thumbnail.jpg" alt="a thumbnail" width="150" height="100">
+                    <p>Some Movie Title</p>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
