--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <header>
             <h1>Movie Tube</h1>
             <nav>
-                <ul>
+                <ul class="header-nav-list">
                     <li>Action</li>
                     <li>Thriller</li>
                     <li>Comedy</li>
@@ -28,7 +28,7 @@
                 </nav>
             </aside>
 
-            <section>
+            <section class="cards">
                 <div class="card">
                     <img src="images/thumbnail.jpg" alt="a thumbnail" width="150" height="100">
                     <p>Some Movie Title</p>
